@@ -69,6 +69,7 @@ cloud_final_modules:
  - keys-to-console
  - phone-home
  - final-message
+ - finalcmd
 
 # System and/or distro specific settings
 # (not accessible to handlers/transforms)
